kubernetes/apps/overseerr/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
