kubernetes/apps/overseerr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
    - name: web
      protocol: TCP
      port: 5055
      targetPort: 5055
