kubernetes/apps/overseerr/base/ingress.yaml
# HTTP ingress with redirect to HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress-http
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: media-https-redirect@kubernetescrd
spec:
  rules:
    - host: overseerr.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
---
# HTTPS ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress-https
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - overseerr.sargeant.co
      secretName: overseerr-tls
  rules:
    - host: overseerr.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
